[gd_scene load_steps=18 format=3 uid="uid://bff50u8xdno6w"]

[ext_resource type="Script" path="res://Levels/Map1.gd" id="1_eoatb"]
[ext_resource type="Script" path="res://Levels/CanvasLayer.gd" id="2_4uklt"]
[ext_resource type="Texture2D" uid="uid://b6pjq4dwv55ko" path="res://Art/Maps/Map1_base.png" id="2_pg5w2"]
[ext_resource type="Texture2D" uid="uid://bxd47gu2gm3v1" path="res://Art/Maps/Objects/Map1_bush.png" id="3_j46g1"]
[ext_resource type="Texture2D" uid="uid://dxqdqfppm0yfp" path="res://Art/Maps/Map1_outer.png" id="3_yacub"]
[ext_resource type="PackedScene" uid="uid://cbfcb208yyi6s" path="res://Characters/spren.tscn" id="4_8vsj7"]
[ext_resource type="Texture2D" uid="uid://du6luh0gwdjfi" path="res://Art/BrokenDrum.PNG" id="6_86grn"]
[ext_resource type="PackedScene" uid="uid://cwx63b6pq552y" path="res://UI/text_box.tscn" id="7_dec31"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmdvg"]
resource_local_to_scene = true
size = Vector2(1892.19, 2470.59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7wb0"]
size = Vector2(231.001, 140)

[sub_resource type="CircleShape2D" id="CircleShape2D_x4m6t"]
radius = 29.0186

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uj82v"]
size = Vector2(281.001, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_irndf"]
size = Vector2(245.251, 267.001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bn2su"]
size = Vector2(30.0025, 600.501)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvmln"]
size = Vector2(189.001, 23.5001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6b0d3"]
size = Vector2(59.5013, 430.501)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_51eoy"]
size = Vector2(597.503, 125)

[node name="Map1" type="Node2D"]
z_index = -10
script = ExtResource("1_eoatb")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 26
position = Vector2(0, -200)
zoom = Vector2(2, 2)
limit_left = -300
limit_top = -300
limit_right = 300
limit_bottom = 300
drag_vertical_enabled = true
editor_draw_limits = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
layer = 8
script = ExtResource("2_4uklt")

[node name="Tab_Overlay" type="Panel" parent="Camera2D/CanvasLayer"]
z_index = 1000
offset_left = 6.0
offset_top = 16.0
offset_right = 110.0
offset_bottom = 29.0
scale = Vector2(2, 2)

[node name="tab_open" type="Label" parent="Camera2D/CanvasLayer/Tab_Overlay"]
layout_mode = 0
offset_left = 5.0
offset_right = 199.0
offset_bottom = 26.0
scale = Vector2(0.5, 0.5)
text = "Press TAB to see controls"

[node name="Control_Overlay" type="Panel" parent="Camera2D/CanvasLayer"]
visible = false
z_index = 100
offset_left = -2.0
offset_top = -2.0
offset_right = 606.0
offset_bottom = 307.0
scale = Vector2(2, 2)

[node name="tab_close" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 9.0
offset_top = 9.0
offset_right = 203.0
offset_bottom = 35.0
scale = Vector2(0.5, 0.5)
text = "Press TAB to close"

[node name="Overworld" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 148.0
offset_top = 55.0
offset_right = 230.0
offset_bottom = 81.0
scale = Vector2(0.8, 0.8)
text = "Overworld"

[node name="Rhythm" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 413.0
offset_top = 55.0
offset_right = 474.0
offset_bottom = 81.0
scale = Vector2(0.8, 0.8)
text = "Rhythm
"

[node name="Controls" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 260.0
offset_top = 23.0
offset_right = 326.0
offset_bottom = 49.0
text = "Controls"

[node name="OverworldControls" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 134.0
offset_top = 75.0
offset_right = 291.0
offset_bottom = 205.0
scale = Vector2(0.6, 0.6)
text = "Up: W
Left: A
Down: S
Right: D
Interact: Space"
horizontal_alignment = 3

[node name="RhythmControls" type="Label" parent="Camera2D/CanvasLayer/Control_Overlay"]
layout_mode = 0
offset_left = 389.0
offset_top = 76.0
offset_right = 549.0
offset_bottom = 206.0
scale = Vector2(0.6, 0.6)
text = "Left: A
Center-Left: S
Center: Space
Center-Right: K
Right: L
Quit: Esc"
horizontal_alignment = 3

[node name="Spren" parent="." instance=ExtResource("4_8vsj7")]
z_index = 1
position = Vector2(0, -200)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Spren"]
remote_path = NodePath("../../Camera2D")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
z_index = 1
position = Vector2(515.998, 2)
scale = Vector2(0.999998, 0.999998)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-391.249, -85.0002)
scale = Vector2(0.051, 0.051)
shape = SubResource("RectangleShape2D_vmdvg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(-678.499, -152)
shape = SubResource("RectangleShape2D_k7wb0")

[node name="DrumCollision" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-495, 85)
shape = SubResource("CircleShape2D_x4m6t")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(-676.499, 110)
shape = SubResource("RectangleShape2D_uj82v")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(-329.624, 167.5)
shape = SubResource("RectangleShape2D_irndf")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(-803.999, -2.25)
shape = SubResource("RectangleShape2D_bn2su")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-724.499, 288.001)
shape = SubResource("RectangleShape2D_tvmln")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-243.749, -89.2502)
shape = SubResource("RectangleShape2D_6b0d3")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-519.749, -241.501)
shape = SubResource("RectangleShape2D_51eoy")

[node name="Map1Bush" type="Sprite2D" parent="."]
z_index = 2
scale = Vector2(0.051, 0.051)
texture = ExtResource("3_j46g1")

[node name="Map1Base" type="Sprite2D" parent="."]
z_index = -10
scale = Vector2(0.051, 0.051)
texture = ExtResource("2_pg5w2")

[node name="Map1Outer" type="Sprite2D" parent="."]
z_index = 2
scale = Vector2(0.051, 0.051)
texture = ExtResource("3_yacub")

[node name="BrokenDrum" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(20, 77)
scale = Vector2(0.02, 0.02)
texture = ExtResource("6_86grn")

[node name="TextBox" parent="." instance=ExtResource("7_dec31")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[connection signal="force_quit" from="TextBox" to="." method="_on_text_box_force_quit"]
[connection signal="text_finished" from="TextBox" to="." method="_on_text_box_text_finished"]
